# Surveillance-System

./: CMakeLists.txt  README.md  alert.cpp  camera.cpp  gpio.cpp  install.sh  logger.cpp  main.cpp  motion.cpp  recorder.cpp  stream.cpp  surveillance.hpp
